commented out the data in pom