@@ -38,18 +38,20 @@
             <version>3.26.0</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.23.1</version>
-        </dependency>
-
+        <!--
+                <dependency>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
+                    <version>2.23.1</version>
+                </dependency>
+                -->
+        <!--
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.13</version>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -86,20 +88,24 @@
 
     <build>
         <plugins>
+            <!-- плагин для компиляции исходников и тестов-->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.11.0</version>
             </plugin>
+            <!-- плагин для юнит тестов приложения-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
+                        <test>WebTest</test>>
                     </argLine>
                 </configuration>
             </plugin>
+            <!-- плагин для интеграционных тестов-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
@@ -115,15 +121,15 @@
 
 
     <!-- оставила для примера
-        <repositories>
+    <repositories>
 
-            <repository>
-                <id>public-javarush-repo</id>
-                <name>Public JavaRush Repository</name>
-                <url>http://maven.javarush.com</url>
-            </repository>
+        <repository>
+            <id>public-javarush-repo</id>
+            <name>Public JavaRush Repository</name>
+            <url>http://maven.javarush.com</url>
+        </repository>
 
-        </repositories>
--->
+    </repositories>
+    -->
 
 </project>
